--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,12 +1,25 @@
+
 /* Make the navbar look sleek */
 .navbar {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid #eaeaea;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
+
 
 .navbar-brand img {
     max-height: 73px; /* Adjust as needed */
     width: auto; /* Maintain aspect ratio */
+}
+
+.alert-primary,
+.announcement.alert-primary {
+  background-color: #6699CC !important;
+  border-color: #6699CC !important;
+  color: white !important;
+  font-size: 3.4rem;
+  font-weight: 1000;
 }
 
 /* Footer styling */
@@ -33,6 +46,8 @@ h1, h2, h3, h4 {
     font-family: 'Roboto Slab', serif;
     color: #222;
 }
+
+
 
 /* Body text */
 body {
